--- a/src/components/PromoBlock/style.scss
+++ b/src/components/PromoBlock/style.scss
@@ -195,7 +195,7 @@
 @media (max-width: 700px) {
     .promoBlock {
         height: auto;
-        min-height: 100vh;
+        min-height: -webkit-fill-available;
         position: static;
 
         &__info {
